<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/group1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    <TextView
        android:id="@+id/date_inscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:textColor="#081272"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/prix_magazine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:textColor="#aff53d"
        android:textSize="17sp"
        android:textStyle="bold" />
	</LinearLayout>
  <TextView
        android:id="@+id/theme_magazine"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:textColor="#081272"
        android:textSize="15sp"
        android:textStyle="bold" />

 <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="10"
        android:text="@string/hello_world" />

    <LinearLayout
        android:id="@+id/group2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp" >

        <Button
            android:id="@+id/commenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:text="@string/commenter" />

        <Button
            android:id="@+id/retour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:text="@string/retour" />

        <Button
            android:id="@+id/masquer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:onClick="onMasquer"
            android:text="masquer" />
    </LinearLayout>

</LinearLayout>